--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
         "indent": [
             "error",
              4
-        ]
+        ],
+        "max-len": 0,
+        "no-underscore-dangle": 0
     }
 }
