--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
     "husk": "^0.5.3",
     "husky": "^4.2.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
@@ -27,6 +33,9 @@
     "hooks": {
       "pre-commit": "npm run lint"
     }
+  },
+  "engines": {
+    "node": ">=10.0.0"
   },
   "author": "",
   "license": "ISC"
